# simulator-automatic-warehouse

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.tex  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.txt  bash_graphic_construction.py  debug_library.py  main.py  manual_warehouse.py  pyproject.toml  requirements.txt  run_simulator.py  run_webpage.py  slim-Dockerfile  tmp.txt  useful_functions.py  warehouse_operations.py  web_app-requirements.txt  windows-tests.ps1
.github/: dependabot.yaml
.github/workflows/: ci.yaml
automatic_warehouse/: configuration.py  configuration_validator.py  env_vars.py  material.py  tray.py  warehouse.py  warehouse_configuration_singleton.py
automatic_warehouse-config/: sample_config.yaml
automatic_warehouse-config/univr/: ICE_lab.yaml
automatic_warehouse-res/configuration/: json_schema.json
automatic_warehouse/simulation/: simulation.py
automatic_warehouse/simulation/actions/: action.py  action_enum.py  buffer.py  extract_tray.py  send_back_tray.py
automatic_warehouse/simulation/simulation_type/: warehouse_simulation.py
automatic_warehouse/status_warehouse/: material.py  tray.py
automatic_warehouse/status_warehouse/container/: carousel.py  column.py  enum_container.py  tray_container.py
automatic_warehouse/status_warehouse/entry/: empty_entry.py  entry.py  tray_entry.py
automatic_warehouse/utils/decide_position_algorithm/: algorithm.py  enum_algorithm.py
automatic_warehouse/utils/statistics/: README.md  warehouse_statistics.py
changelog/: CHANGELOG.aux  CHANGELOG.md  CHANGELOG.tex
configuration/: README.md  TODO.md  sample_config.yaml
configuration/univr/: ICE_lab.json  ICE_lab.yaml
docker/: Dockerfile-alpine  Dockerfile-debian  docker-compose.yaml
docs/: build.sh  conf.py  dependencies.rst  description.rst  index.rst  installation.rst  manual_installation.rst  pypi.rst  requirements.in  requirements.txt
docs/_static/: switcher.json
docs/sections/api-reference/: api-reference.rst
docs/sections/concepts-and-configuration/: concepts-and-configuration.rst
docs/sections/getting-started/: getting-started.rst
docs/sections/simulation-results/: simulation-results.rst
docs/sections/step-by-step-guide/: step-by-step-guide.rst
old_project/: bash_graphic_construction.py  main.py  manual_warehouse.py  test.py  useful_functions.py  warehouse_operations.py
resource/: info.json  info.txt
resources/configuration/: json_schema.json
resources/security_weaknesses/: README.md
rsc/: config.json  info.json
src/: configuration.py  configuration_validator.py  drawer.py  event.py  main.py  material.py  simulation.py  tray.py  useful_func.py  warehouse.py  warehouse_configuration_singleton.py
src/sim/: __main__.py  configuration.py  drawer.py  main.py  material.py  simulation.py  tray.py  useful_func.py  warehouse.py  warehouse_configuration_singleton.py
src/sim/simulation/: simulation.py
src/sim/utils/: save_warehouse_state.py  warehouse_statistics.py
src/simulation/: simulation.py
src/simulation/actions/: action.py  buffer.py  extract_tray.py  send_back_tray.py
src/simulation/simulation_type/: warehouse_simulation.py
src/status_warehouse/: enum_warehouse.py  left_column.py  right_column.py  status.py
src/status_warehouse/Container/: carousel.py  column.py  drawerContainer.py
src/status_warehouse/Entry/: drawerEntry.py  emptyEntry.py  entry.py  outputEntry.py
src/status_warehouse/Simulate_Events/: action.py  buffer.py  come_back_to_deposit.py  extract_drawer.py  go_to_deposit_drawer.py  insertDrawerInWarehouse.py  insertMaterial.py  insert_material.py  insert_random_material.py  load_drawer.py  moveDrawer.py  removeDrawerFromWarehouse.py  remove_material.py  search_material.py  send_back_drawer.py  show_buffer.py  take_bay.py  unload_drawer.py  vertical_move.py
src/status_warehouse/container/: carousel.py  column.py  tray_container.py
src/status_warehouse/entry/: empty_entry.py  tray_entry.py
src/utils/decide_position_algorithm/: algorithm.py
src/utils/statistics/: README.md  warehouse_statistics.py
src/web_app/: configuration.py  index.py  timeline.py
src/web_app/assets/: custom.css  header.css  typography.css
src/web_app/cache/: cache.db
src/web_app/components/: navbar.py  timeline.py
src/web_app/images/: graph_actions.xlsx
src/web_app/layouts/: custom_configuration.py  simulation_statistics.py
src/web_app/pages/: documentation.py  not_found_404.py
src/web_app/tmp (assets)/: typography.css
src/web_app/utils/: callbacks_utilities.py  statistics.py
tests/: README.md  pytest.ini  test-requirements.txt  test_config.yaml  test_config_2.yaml  tox.ini
tests/sim/: test_drawer.py  test_hash.py  test_main.py  test_material.py  test_warehouse_configuration_singleton.py
tmp/: app.py  bootstrap.py  config_warehouse.txt  cool_app.py  dark_mode.py  dark_mode2.py  prova.py
(+191 files in other folders)
