[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulator-automatic-warehouse"
dynamic = ["version"]
description = 'Simulator and Digital Twin of an Automatic Warehouse.'
readme = "README.md"
requires-python = ">= 3.9"
license = "MIT"
keywords = [
  "warehouse",
  "automatic warehouse",
  "simulator automatic warehouse",
  "simulator",
  "univr",
  "ferretto",
  "vertimag",
  "digital twin"
]
authors = [
  { name = "Andrea Valentini", email = "andrea.valentini.0000@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft",
  "Operating System :: Unix"
]
dependencies = [
  "pandas==2.2.3",
  "simpy==4.1.1",
  "PyYAML==6.0.2",
  "jsonschema==4.23.0"
]

[project.urls]
Documentation = "https://simulator-automatic-warehouse.readthedocs.io/en/latest/"
PyPI = "https://pypi.org/project/simulator-automatic-warehouse"
GitHub = "https://github.com/AndreVale69/simulator-automatic-warehouse"
Changelog = "https://github.com/AndreVale69/simulator-automatic-warehouse/blob/main/CHANGELOG.md"
Issues = "https://github.com/AndreVale69/simulator-automatic-warehouse/issues"

[tool.hatch.version]
path = "automatic_warehouse/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-xdist",
  "pytest-cov",
  "pytest-env"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[template.plugins.default]
src-layout = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/configuration/univr",
  "/docker",
  "/docs",
  "/tests",
  ".gitignore",
  "CHANGELOG.md",
  "run_simulator.py"
]

[tool.hatch.build.targets.wheel]
packages = ["automatic_warehouse", "automatic_warehouse-config", "automatic_warehouse-res"]
